crates/vox-compiler/tests/snapshots/golden_dashboard_chrome_test__status_bar_tsx_dashboard_chrome.snap
---
source: crates/vox-compiler/tests/golden_dashboard_chrome_test.rs
expression: ts
---
import React from "react";

import { StatusSegment } from "./StatusSegment";

export interface StatusBarProps {
  active: string;
}

export function StatusBar({ active }: StatusBarProps): React.ReactElement {
    const mesh_nodes = "12";
    const queue_count = "3";
    const error_count = "2";
    const model_name = "sonnet-4.6";
    const build_state = "idle";
    const cost_used = "$4.82";
    const cost_cap = "$50.00";
    const utc_time = "UTC 14:32";
  return (
<div className={["flex", "flex-row", "h-[26px] shrink-0", "border-t-true", "border-zinc-800", "px-4", "flex items-center", "flex justify-between", "bg-zinc-950"].filter(Boolean).join(" ")}
>
  <div className={["flex", "flex-row", "flex items-center", "gap-3"].filter(Boolean).join(" ")}
>
  <StatusSegment label={"mesh"} value={mesh_nodes} dot_color={"emerald.400"} highlighted={(active === "mesh" ? true : false)} />
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"·"}
</p>
  <StatusSegment label={"queue"} value={queue_count} dot_color={"emerald.400"} highlighted={(active === "runs" ? true : false)} />
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"·"}
</p>
  <StatusSegment label={"errors"} value={error_count} dot_color={"rose.500"} highlighted={(active === "code" ? true : false)} />
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"·"}
</p>
  <StatusSegment label={"model"} value={model_name} dot_color={"emerald.400"} highlighted={(active === "models" ? true : false)} />
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"·"}
</p>
  <StatusSegment label={"build"} value={build_state} dot_color={"zinc.600"} highlighted={(active === "forge" ? true : false)} />
</div>
  <div className={["flex", "flex-row", "flex items-center", "gap-2"].filter(Boolean).join(" ")}
>
  <p className={["text-xs", "font-mono", "text-zinc-600"].filter(Boolean).join(" ")}
>
  {"cost"}
</p>
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"·"}
</p>
  <p className={["text-xs", "font-mono", "text-zinc-500"].filter(Boolean).join(" ")}
>
  {cost_used}
</p>
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"/"}
</p>
  <p className={["text-xs", "font-mono", "text-zinc-600"].filter(Boolean).join(" ")}
>
  {cost_cap}
</p>
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"·"}
</p>
  <p className={["text-xs", "font-mono", "text-zinc-600"].filter(Boolean).join(" ")}
>
  {"24h"}
</p>
  <p className={["text-xs", "text-zinc-700"].filter(Boolean).join(" ")}
>
  {"·"}
</p>
  <p className={["text-xs", "font-mono", "text-zinc-600"].filter(Boolean).join(" ")}
>
  {utc_time}
</p>
</div>
</div>
  );
}
