crates/vox-compiler/tests/snapshots/golden_dashboard_chrome_test__top_bar_tsx_dashboard_chrome.snap
---
source: crates/vox-compiler/tests/golden_dashboard_chrome_test.rs
expression: ts
---
import React from "react";

import { NavIcon } from "./NavIcon";
import { StateChip } from "./StateChip";

export interface TopBarProps {
  workspace: string;
  run_status: string;
  run_label: string;
}

export function TopBar({ workspace, run_status, run_label }: TopBarProps): React.ReactElement {
  return (
<row h={12} border_b={true} border_color={"zinc.800"} pad_x={4} items={"center"} justify={"between"} shrink={0} bg={"zinc.950"}
>
  <button raw_class={"flex items-center gap-1.5 hover:bg-white/5 rounded-lg px-2 py-1 transition-colors"} bg={"transparent"} color={"zinc.300"} border={false}
>
  <text size={"xs"} weight={"bold"} color={"zinc.400"} tracking={"widest"} case={"upper"}
>
  {"Vox"}
</text>
  <text size={"xs"} color={"zinc.700"}
>
  {"/"}
</text>
  <text size={"sm"} color={"zinc.300"} fontFamily={"mono"}
>
  {workspace}
</text>
  <text size={"xs"} color={"zinc.600"} raw_class={"ml-0.5"}
>
  {"‹"}
</text>
</button>
  <button raw_class={"flex items-center gap-2 w-64"} bg={"zinc.900"} border={true} border_color={"white/10"} radius={"lg"} pad_x={3} pad_y={1} color={"zinc.500"}
>
  <NavIcon name={"search"} />
  <text size={"xs"} color={"zinc.600"} raw_class={"flex-1 text-left"}
>
  {"Search or jump to…"}
</text>
  <panel border={true} border_color={"white/15"} radius={"sm"} pad_x={1} bg={"white/5"} raw_class={"h-5 inline-flex items-center"}
>
  <text size={"xs"} fontFamily={"mono"} color={"zinc.500"}
>
  {"⌘K"}
</text>
</panel>
</button>
  <row items={"center"} gap={3}
>
  <StateChip status={run_status} label={run_label} />
  <panel w={7} h={7} radius={"full"} bg={"blue.600/20"} border={true} border_color={"blue.500/30"} raw_class={"flex items-center justify-center"}
>
  <text size={"xs"} weight={"bold"} color={"blue.400"} fontFamily={"mono"}
>
  {"AU"}
</text>
</panel>
</row>
</row>
  );
}
